--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NEXUS</title>
-    <link rel="icon" type="image/x-icon" href="/public/icon.svg">
+    <link rel="icon" type="image/x-icon" href="/icon.svg">
   </head>
   <body>
     <div id="root"></div>
